# esp32c3_rtt_defmt_testing

./: Cargo.toml  Embed.toml  README.md
.cargo/: config.toml
src/: main.rs
