[package]
name = "esp32c3_rtt_defmt_testing"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32c3-hal = { package = "esp32c3-hal", git = "https://github.com/esp-rs/esp-hal.git", rev = "2b15b18c6b7f334beaee9ab5783ab4a4b71ef708"}
riscv-rt = { version = "0.9", optional = true }
defmt = "0.3.2"
defmt-rtt = "0.4"
panic-halt = "0.2"

[features]
default = ["rt"]
rt = ["riscv-rt"]
directboot = ["esp32c3-hal/direct-boot"]

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false 